<resources>
  <string name="app_name">CrownTron</string>
  <string name="login">LOGIN</string>
  <string name="forgot_password">Forgot Password ?</string>
  <string name="username">Username</string>
  <string name="password">Password</string>
  <string name="register">Register</string>
  <string name="ex_balance">0 TRX</string>
  <string name="binary">Binary</string>
  <string name="manual">One Shot</string>
  <string name="next">Next</string>
  <string name="deposit">Switch</string>
  <string name="transfer">Transfer</string>
  <string name="send">Switch To Bot</string>
  <string name="send_all">Switch All To Bot</string>
  <string name="end_session">End Session</string>
  <string name="amount">Amount</string>
  <string name="wallet">Wallet</string>
  <string name="description">press logo to open barcode scan</string>
  <string name="address">address</string>
  <string name="balance">Balance</string>
  <string name="type">type</string>
  <string name="at">At</string>
  <string name="zero">0</string>
  <string name="data_null">-</string>
  <string name="zero_percent">0%</string>
  <string name="reset">Reset</string>
  <string name="start">Start</string>
  <string name="save">Save</string>
  <string name="load">Load</string>
  <string name="example_balance">0.0000000 TRX</string>
  <string name="need_chart">Need Chart</string>
  <string name="booster">Booster</string>
  <string name="change">Change</string>
  <string name="chance">Chance %</string>
  <string name="click_here">Click Here</string>
  <string name="claim">Claim</string>
  <string name="default_amount">Default Amount</string>
  <string name="packages">Packages</string>
  <string name="ledger">Ledger</string>
  <string name="transaction">Transaction</string>
  <string name="history">History</string>
  <string name="profit_balance">Profit Balance</string>
  <string name="referral">Referral</string>
  <string name="copy">Copy</string>
  <string name="profit_package">Profit Package</string>
  <string name="profit_pairing">Profit Pairing</string>
  <string name="total_profit">Total Profit</string>
  <string name="total_profit_left">Total Profit Left</string>
  <string name="total_profit_right">Total Profit right</string>
  <string name="profit_left">Profit Left</string>
  <string name="profit_right">Profit Right</string>
  <string name="user_left">User Left</string>
  <string name="user_right">User Right</string>
</resources>