<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.HomeActivity"
    android:background="@color/resources.background">

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="60dp"
        android:elevation="2dp">

      <ImageView
          android:layout_width="60dp"
          android:layout_height="60dp"
          app:srcCompat="@mipmap/ic_launcher_round"
          android:id="@+id/imageViewGrade"
          app:layout_constraintTop_toTopOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintEnd_toStartOf="@id/textViewUsername"
          app:layout_constraintBottom_toBottomOf="parent"
          android:layout_marginStart="15dp"
          android:layout_marginEnd="10dp"
          android:contentDescription="@string/app_name"
          android:scaleType="fitCenter"/>

      <TextView
          android:text="@string/username"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:id="@+id/textViewUsername"
          app:layout_constraintTop_toTopOf="parent"
          app:layout_constraintStart_toEndOf="@id/imageViewGrade"
          app:layout_constraintEnd_toStartOf="@id/imageButtonLogout"
          app:layout_constraintBottom_toBottomOf="parent"/>

      <ImageButton
          android:layout_width="40dp"
          android:layout_height="40dp"
          app:srcCompat="@drawable/ic_baseline_power_settings_new"
          android:id="@+id/imageButtonLogout"
          android:background="@drawable/button_default"
          app:layout_constraintTop_toTopOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintBottom_toBottomOf="parent"
          android:layout_marginTop="10dp"
          android:layout_marginEnd="20dp"
          android:layout_marginBottom="10dp"
          android:elevation="20dp"
          android:contentDescription="@string/login"
          app:tint="@color/resources.button.danger"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginHorizontal="10dp">

      <TextView
          android:text="@string/referral"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:id="@+id/textViewLinkReferral"
          android:layout_weight="1"
          android:textColor="@color/resources.text.dark"
          android:background="@drawable/edit_text_default"
          android:layout_marginHorizontal="5dp"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="parent"
          app:layout_constraintEnd_toStartOf="@id/buttonCopyReferral"
          app:layout_constraintBottom_toBottomOf="parent"/>

      <androidx.appcompat.widget.AppCompatButton
          android:text="@string/copy"
          android:layout_width="wrap_content"
          android:layout_height="30dp"
          android:id="@+id/buttonCopyReferral"
          android:background="@drawable/button_default"
          android:textColor="@color/resources.text"
          android:layout_marginHorizontal="5dp"
          app:layout_constraintTop_toTopOf="parent"
          app:layout_constraintStart_toEndOf="@id/textViewLinkReferral"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintBottom_toBottomOf="parent"
          tools:ignore="TouchTargetSizeCheck"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginHorizontal="20dp">

      <TextView
          android:text="@string/zero"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:id="@+id/textViewProfitBalance"
          android:layout_marginEnd="10dp"
          android:textSize="24sp"/>

      <TextView
          android:text="@string/profit_balance"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_weight="1"/>

      <androidx.appcompat.widget.AppCompatButton
          android:id="@+id/buttonClaimProfitBalance"
          android:text="@string/claim"
          android:layout_width="80dp"
          android:layout_height="24dp"
          android:background="@drawable/button_default"/>

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="5dp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/primary.light"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="5dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginHorizontal="20dp">

      <TextView
          android:text="@string/zero"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:id="@+id/textViewProfitPackage"
          android:layout_marginEnd="10dp"
          android:textSize="24sp"/>

      <TextView
          android:text="@string/profit_package"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_weight="1"/>

      <androidx.appcompat.widget.AppCompatButton
          android:id="@+id/buttonClaimProfitPackage"
          android:text="@string/claim"
          android:layout_width="80dp"
          android:layout_height="24dp"
          android:background="@drawable/button_default"/>

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="5dp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/primary.light"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="5dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_marginHorizontal="20dp">

      <TextView
          android:text="@string/zero"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:id="@+id/textViewProfitPairing"
          android:layout_marginEnd="10dp"
          android:textSize="24sp"/>

      <TextView
          android:text="@string/profit_pairing"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_weight="1"/>

      <androidx.appcompat.widget.AppCompatButton
          android:id="@+id/buttonClaimProfitPairing"
          android:text="@string/claim"
          android:layout_width="80dp"
          android:layout_height="24dp"
          android:background="@drawable/button_default"/>

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="5dp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/primary.light"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp"/>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="10dp">

      <TableRow
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:gravity="center"
          tools:ignore="UselessParent">

        <LinearLayout
            android:id="@+id/linearLayoutTransfer"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@drawable/button_default"
            android:orientation="vertical"
            android:gravity="center">

          <ImageView
              android:layout_width="40dp"
              android:layout_height="40dp"
              app:srcCompat="@drawable/ic_baseline_near_me"
              android:contentDescription="@string/app_name"
              app:tint="@color/resources.text"/>

          <TextView
              android:text="@string/transfer"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:textStyle="bold"
              android:textColor="@color/resources.text"
              android:gravity="center"/>

        </LinearLayout>

        <Space
            android:layout_width="20dp"
            android:layout_height="match_parent"/>

        <LinearLayout
            android:id="@+id/linearLayoutHistory"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:background="@drawable/button_default"
            android:orientation="vertical"
            android:gravity="center">

          <ImageView
              android:layout_width="40dp"
              android:layout_height="40dp"
              app:srcCompat="@drawable/ic_baseline_restore"
              android:contentDescription="@string/app_name"
              app:tint="@color/resources.text"/>

          <TextView
              android:text="@string/history"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:textStyle="bold"
              android:textColor="@color/resources.text"
              android:gravity="center"/>

        </LinearLayout>

      </TableRow>

    </TableLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/primary.light"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp"/>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="10dp">

      <TableRow
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:gravity="center"
          android:layout_marginBottom="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            tools:ignore="UselessParent">

          <TextView
              android:text="@string/total_profit"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:textSize="16sp"/>

          <Space
              android:layout_width="match_parent"
              android:layout_height="5dp"/>

          <TextView
              android:id="@+id/textViewTotalProfit"
              android:text="@string/zero"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:textSize="20sp"/>

        </LinearLayout>

      </TableRow>

      <TableRow
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:gravity="center"
          android:layout_marginBottom="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:background="@drawable/card_default"
            android:padding="10dp"
            android:layout_marginHorizontal="10dp">

          <TextView
              android:text="@string/total_profit_left"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:textSize="16sp"/>

          <Space
              android:layout_width="match_parent"
              android:layout_height="5dp"/>

          <TextView
              android:id="@+id/textViewTotalProfitLeft"
              android:text="@string/zero"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:background="@drawable/card_default"
            android:padding="10dp"
            android:layout_marginHorizontal="10dp">

          <TextView
              android:text="@string/total_profit_right"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:textSize="16sp"/>

          <Space
              android:layout_width="match_parent"
              android:layout_height="5dp"/>

          <TextView
              android:id="@+id/textViewTotalProfitRight"
              android:text="@string/zero"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"/>

        </LinearLayout>

      </TableRow>

      <TableRow
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:gravity="center"
          android:layout_marginBottom="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:background="@drawable/card_default"
            android:padding="10dp"
            android:layout_marginHorizontal="10dp">

          <TextView
              android:text="@string/profit_left"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:textSize="16sp"/>

          <Space
              android:layout_width="match_parent"
              android:layout_height="5dp"/>

          <TextView
              android:id="@+id/textViewProfitLeft"
              android:text="@string/data_null"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:background="@drawable/card_default"
            android:padding="10dp"
            android:layout_marginHorizontal="10dp">

          <TextView
              android:text="@string/profit_right"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:textSize="16sp"/>

          <Space
              android:layout_width="match_parent"
              android:layout_height="5dp"/>

          <TextView
              android:id="@+id/textViewProfitRight"
              android:text="@string/data_null"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"/>

        </LinearLayout>

      </TableRow>

      <TableRow
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:gravity="center"
          android:layout_marginBottom="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:background="@drawable/card_default"
            android:padding="10dp"
            android:layout_marginHorizontal="10dp">

          <TextView
              android:text="@string/user_left"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:textSize="16sp"/>

          <Space
              android:layout_width="match_parent"
              android:layout_height="5dp"/>

          <TextView
              android:id="@+id/textViewUserLeft"
              android:text="@string/data_null"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:background="@drawable/card_default"
            android:padding="10dp"
            android:layout_marginHorizontal="10dp">

          <TextView
              android:text="@string/user_right"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:textSize="16sp"/>

          <Space
              android:layout_width="match_parent"
              android:layout_height="5dp"/>

          <TextView
              android:id="@+id/textViewUserRight"
              android:text="@string/data_null"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              tools:ignore="TooManyViews"/>

        </LinearLayout>

      </TableRow>

    </TableLayout>

  </LinearLayout>

</ScrollView>