<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activity.LedgerActivity"
    android:background="@drawable/background"
    android:orientation="vertical">

  <Space
      android:layout_width="match_parent"
      android:layout_height="20dp"/>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      android:gravity="center_vertical"
      android:layout_marginHorizontal="20dp">

    <TextView
        android:text="@string/zero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textViewProfitBalance"
        android:layout_marginEnd="10dp"
        android:textSize="24sp"/>

    <TextView
        android:text="@string/profit_balance"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonClaimProfitBalance"
        android:text="@string/claim"
        android:layout_width="80dp"
        android:layout_height="24dp"
        android:background="@drawable/button_default"/>

  </LinearLayout>

  <Space
      android:layout_width="match_parent"
      android:layout_height="5dp"/>

  <View
      android:layout_width="match_parent"
      android:layout_height="1dp"
      android:background="@color/primary.light"
      android:layout_marginStart="10dp"
      android:layout_marginEnd="10dp"/>

  <Space
      android:layout_width="match_parent"
      android:layout_height="5dp"/>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      android:gravity="center_vertical"
      android:layout_marginHorizontal="20dp">

    <TextView
        android:text="@string/zero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textViewProfitPairing"
        android:layout_marginEnd="10dp"
        android:textSize="24sp"/>

    <TextView
        android:text="@string/profit_pairing"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonClaimProfitPairing"
        android:text="@string/claim"
        android:layout_width="80dp"
        android:layout_height="24dp"
        android:background="@drawable/button_default"/>

  </LinearLayout>

  <Space
      android:layout_width="match_parent"
      android:layout_height="5dp"/>

  <View
      android:layout_width="match_parent"
      android:layout_height="1dp"
      android:background="@color/primary.light"
      android:layout_marginStart="10dp"
      android:layout_marginEnd="10dp"/>

  <Space
      android:layout_width="match_parent"
      android:layout_height="20dp"/>

  <androidx.recyclerview.widget.RecyclerView
      android:id="@+id/lists_container"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_margin="5dp"
      android:padding="10dp"/>

</LinearLayout>