<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activity.LoginActivity"
    android:background="@drawable/base_background">

  <ImageView
      android:id="@+id/image_logo"
      android:layout_width="100dp"
      android:layout_height="100dp"
      app:srcCompat="@mipmap/ic_launcher_round"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintBottom_toTopOf="@id/container_login"
      android:layout_marginTop="20dp"
      android:contentDescription="@string/app_name"/>

  <TextView
      android:text="@string/app_name"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:textSize="24sp"
      android:textStyle="bold"
      android:gravity="center"
      app:layout_constraintTop_toBottomOf="@id/image_logo"
      app:layout_constraintBottom_toTopOf="@id/container_login"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      android:textColor="@color/resources.text"/>

  <LinearLayout
      android:id="@+id/container_login"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintBottom_toBottomOf="parent"
      android:layout_marginStart="20dp"
      android:layout_marginEnd="20dp"
      android:paddingStart="15dp"
      android:paddingEnd="15dp">

    <TextView
        android:text="@string/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/resources.text"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="5dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/editTextUsername"
        android:background="@drawable/edit_text_default"
        android:hint="@string/username"
        android:autofillHints="username"
        android:textColor="@color/resources.text.dark"
        android:drawablePadding="10dp"
        android:textColorHint="@color/background.dark"
        android:drawableTint="@color/resources.icon.dark"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="15dp"/>

    <TextView
        android:text="@string/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/resources.text"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="5dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editTextPassword"
        android:background="@drawable/edit_text_default"
        android:hint="@string/password"
        android:autofillHints="password"
        android:textColor="@color/resources.text.dark"
        android:drawablePadding="10dp"
        android:textColorHint="@color/background.dark"
        android:drawableTint="@color/resources.icon.dark"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:text="@string/login"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:minWidth="120dp"
        android:id="@+id/buttonLogin"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/button_default"
        android:textColor="@color/resources.text"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="30dp"/>

  </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>