<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activity.TransferPinActivity"
    android:background="@drawable/transaction_background">

  <LinearLayout
      android:id="@+id/cardQr"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      android:layout_margin="10dp"
      android:padding="10dp"
      android:background="@drawable/card_dark"
      android:elevation="20dp"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent">

    <com.budiyev.android.codescanner.CodeScannerView
        android:id="@+id/frameLayoutScanner"
        android:layout_width="match_parent"
        android:layout_height="310dp"
        android:background="@drawable/ic_baseline_camera"
        android:layout_margin="10dp"/>

  </LinearLayout>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      android:layout_margin="10dp"
      android:padding="10dp"
      android:elevation="10dp"
      app:layout_constraintTop_toBottomOf="@id/cardQr"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintVertical_bias="0.0">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textViewWallet"
        android:gravity="start"
        android:textColor="@color/primary.dark"
        android:textSize="12sp"
        android:text="@string/wallet"
        app:drawableStartCompat="@drawable/ic_core_wallet"
        app:drawableTint="@color/primary.dark"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textViewBalance"
        android:gravity="end"
        android:textColor="@color/primary.dark"
        android:textSize="18sp"
        android:text="@string/zero"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/primary.light"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:ems="10"
        android:id="@+id/editTextWallet"
        android:background="@drawable/edit_text_default"
        android:autofillHints="wallet"
        android:drawablePadding="10dp"
        tools:ignore="LabelFor"
        android:hint="@string/wallet_pin"
        android:textColor="@color/resources.text.dark"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/editTextBalance"
        android:background="@drawable/edit_text_default"
        android:drawablePadding="10dp"
        tools:ignore="LabelFor"
        android:hint="@string/amount"
        android:textColor="@color/resources.text.dark"
        android:autofillHints="amount"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:text="@string/transfer"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:id="@+id/buttonSend"
        android:background="@drawable/button_default"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp"/>

  </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>